   syntax with essentially the same real-world utility, but may
   require some small changes to existing node-position files.  Some
   examples:

     Old (regex)           New (CIDR+glob)
     ===============       ===============
     172.16.2.[0-9]*       172.16.2.0/24
     .*.mydomain.com       *.mydomain.com
     fe80:.*               fe80::/16


   Changes summary:
     * New option to use c-ares for DNS resolution.
     * Multiple node/subnets and glob syntax now supported for central
       node ring.
     * Node-matching syntax for '-P' flag's file now uses CIDR
       notation and hostname-globbing instead of regexes.
     * The background-image feature introduced in 0.9.14 can now be
       turned off via a preference check-box.
     * The background of the protocol legend is now black so that
       lighter colors (e.g. yellow) are more readable.
     * There is now an option to display packet-capture statistics
       from libpcap in the main window (hover the mouse over them for
       an explanation in the status bar).
     * The show/hide state of the toolbar, protocol legend, and status
       bar are now preserved along with other preferences in the
       user's config file.


  Overview of changes in EtherApe 0.9.14 (Saturday February 06, 2016):
   EtherApe now users the system /etc/services file instead of its own.
   While this change make some customizations a bit harder, it guarantees an
   up-to-date services file.
   Note to packagers: /etc/etherape is not needed anymore.

   Central node option now undestands CIDR notation, allowing for a central
   ring of nodes, thanks to Zev Weiss.
   Static background image, courtesy of Glenn Feunteun.
   Nodes can be optionally arranged as columns, thanks to David Goldfarb.


   Changes summary:
     * autoconf updated to 2.69
     * fixed incorrect WLAN control frames decoding
     * fix UTF-8 encoding of several files, thanks to StrPt.